# tustr-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: tustr.hpp
include/tustr/: convert.hpp  fstring.hpp
include/tustr/convert/: to_fstring_from_f.hpp  to_fstring_from_int.hpp
include/tustr/fstring/: alias.hpp  basic_fstring.hpp  deduction_guide.hpp  fstring.hpp  function.hpp
test/: CMakeLists.txt  convert_test.cpp  fstring_test.cpp
